[tool.poetry]
name = "kaibamultipay"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
solana = "^0.17.0"
erdpy = "^1.2.2"
web3 = "^5.28.0"
bitcoinlib = "^0.6.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
